5o issue | [tela comprar] alinhamento centralizado do conteudo da tabela feito com text-align:center para tag table no css

--- a/semana3/bugfixes/index.css
+++ b/semana3/bugfixes/index.css
@@ -102,7 +102,12 @@ div:last-child {
 
 table {
     width: 60%;
+    text-align: center;
 }
+
+/* table>td{
+    text-align: center;
+} */
 
 td button {
     background-color: #fadf63;
